# Exercises-Advanced-Programming

./: README.md
ex-03/: CMakeLists.txt  main.cpp  main.py
ex-03/bindings/: lib_bindings.cpp
ex-03/lib/: dataprocessor.cpp  dataprocessor.hpp
ex-5_01/: CMakeLists.txt  main.cpp  main.py
ex-5_01/bindings/: lib_bindings.cpp
ex-5_01/lib/: calculator.cpp  calculator.hpp
ex2-04/: CMakeLists.txt  main.cpp  main.py
ex2-04/bindings/: lib_bindings.cpp
ex2-04/lib/: consoledatasource.cpp  consoledatasource.hpp  datasource.hpp  datatransformer.hpp  filedatasource.cpp  filedatasource.hpp  linearscaler.hpp  logtransformer.hpp  standardscaler.hpp
ex3-05/: CMakeLists.txt  main.cpp  main.py
ex3-05/bindings/: lib_bindings.cpp
ex3-05/lib/: newton.cpp  newton.hpp
